<resources>
    <string name="app_name">MusicPlayerApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sign_up">Sign_Up</string>
    <string name="user_name">User Name</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password (atleast 6 characters)</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="allready_have_an_account">Allready have an account ?</string>
    <string name="sign_in">sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="sign_in_button">Sign In</string>
    <string name="sign_up_button">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="sign_inbtn">Sign in</string>
    <string name="sign_in_btn">Sign In</string>
    <string name="sign_up_Button">Sign Up</string>
    <string name="sign_in_Button">Sign In</string>
    <string name="go_back">GO BACK</string>
    <string name="main_activity">Main Activity</string>
</resources>