<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4E6170"
    tools:context=".Fragments.SigninFragment">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="136dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo_two"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/circular_std_font"
        android:inputType="textPersonName"
        android:text="@string/sign_inbtn"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="@+id/imageView"
        app:layout_constraintStart_toStartOf="@+id/imageView"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        tools:ignore="TextViewEdits" />


    <EditText
        android:id="@+id/signinemail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/email_id"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/signinpassword"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@drawable/edittext_background"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@id/signinemail"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/signinemail"
        app:layout_constraintTop_toBottomOf="@+id/signinemail"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/signinButton"
        android:layout_width="196dp"
        android:layout_height="45dp"
        android:background="@drawable/gradient_button_background"
        android:textColor="@color/transwhite"
        android:shadowColor="#60468F"
        android:text="@string/sign_in_Button"
        android:enabled="false"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/signinpassword"
        app:layout_constraintStart_toStartOf="@+id/signinpassword"
        app:layout_constraintTop_toBottomOf="@+id/signinpassword"
        app:layout_constraintVertical_bias="0.62" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/donthaveanaccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="32dp"
            android:text="@string/don_t_have_an_account"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2" />

        <TextView
            android:id="@+id/signinback"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:textAlignment="center"
            android:textColor="#d9519d"
            android:textSize="20sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/resetpassword"
        android:layout_width="179dp"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="152dp"
        android:text="Reset Password"
        android:textColor="#d9519d"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="@+id/signinpassword"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/signinpassword"
        app:layout_constraintTop_toBottomOf="@+id/signinpassword"
        app:layout_constraintVertical_bias="0.0" />

    <ProgressBar
        android:id="@+id/signinprogressBar"
        style="@android:style/Widget.DeviceDefault.Light.ProgressBar.Horizontal"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:indeterminate="true"
        android:visibility="invisible"
        android:indeterminateTint="@color/endcolor"
        app:layout_constraintBottom_toTopOf="@+id/signinButton"
        app:layout_constraintEnd_toEndOf="@+id/signinpassword"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/signinpassword"
        app:layout_constraintTop_toBottomOf="@+id/signinpassword"
        app:layout_constraintVertical_bias="0.403" />


</androidx.constraintlayout.widget.ConstraintLayout>